--- a/sample/tests/SnapshotTests/TodoListTest.razor
+++ b/sample/tests/SnapshotTests/TodoListTest.razor
@@ -19,8 +19,8 @@
             </div>
         </form>
         <ol class="list-group">
-            <li id:regex="todo-[\d]+" class="list-group-item list-group-item-action">
-                <span diff:regex>[\w\d]+</span>
+            <li id:regex="todo-42" class="list-group-item list-group-item-action">
+                <span>Check out this new thing called Blazor</span>
                 <span class="float-right text-danger">(click to complete)</span>
             </li>
         </ol>
