--- a/sample/tests/_Imports.razor
+++ b/sample/tests/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Egil.RazorComponents.Testing
 @using Egil.RazorComponents.Testing.EventDispatchExtensions
+@using Egil.RazorComponents.Testing.Asserting
 @using Egil.RazorComponents.Testing.SampleApp
 @using Egil.RazorComponents.Testing.SampleApp.Data
 @using Egil.RazorComponents.Testing.SampleApp.Components
