--- a/sample/tests/RazorTestComponents/Pages/CounterTest.razor
+++ b/sample/tests/RazorTestComponents/Pages/CounterTest.razor
@@ -15,7 +15,7 @@
         var cut = context.GetComponentUnderTest<Counter>();
 
         // assert
-        cut.ShouldBe(context.GetFragment());
+        cut.MarkupMatches(context.GetFragment());
     }
 
     void AfterBtnClickCounterIsIncremented(IRazorTestContext context)
