--- a/tests/BlazorElementReferencesIncludedInRenderedMarkup.razor
+++ b/tests/BlazorElementReferencesIncludedInRenderedMarkup.razor
@@ -1,5 +1,5 @@
-﻿@inherits TestComponentBase
-@using Shouldly
+﻿@*@inherits TestComponentBase
+
 
 <Fixture Test="Test">
     <Fragment>
@@ -17,4 +17,4 @@
 
         html.ShouldContain($"=\"{refElm.Id}\"");
     }
-}
+}*@
