--- a/tests/_Imports.razor
+++ b/tests/_Imports.razor
@@ -1,1 +1,4 @@
-﻿@using Egil.RazorComponents.Testing.SampleComponents
+﻿@using Microsoft.AspNetCore.Components.Web
+@using Egil.RazorComponents.Testing.SampleComponents
+@using Shouldly
+@using Xunit
