--- a/sample/tests/_Imports.razor
+++ b/sample/tests/_Imports.razor
@@ -6,4 +6,5 @@
 @using Egil.RazorComponents.Testing.SampleApp.Data
 @using Egil.RazorComponents.Testing.SampleApp.Components
 @using Egil.RazorComponents.Testing.SampleApp.Pages
-@using Xunit @*or e.g. Shouldly*@
+@using Xunit
+@using Shouldly
