--- a/tests/FixtureMethodsShouldBeCalledInExpectedOrder.razor
+++ b/tests/FixtureMethodsShouldBeCalledInExpectedOrder.razor
@@ -1,41 +1,40 @@
 ﻿@inherits TestComponentBase
-@using Shouldly
 
-<Fixture Setup="Setup" Test="Test1" Tests=@(new Test[] { Test2, Test3 })>
+<Fixture Setup="Setup" Test="Test1" Tests=@(new Action[] { Test2, Test3 })>
     <ComponentUnderTest><div/></ComponentUnderTest>
 </Fixture>
 @code{
     List<string> callOrder = new List<string>();
     IRazorTestContext? seenContext;
 
-    void Setup(IRazorTestContext context)
+    void Setup()
     {
-        seenContext = context;
+        seenContext = this;
         callOrder.Add(nameof(Setup));
         callOrder.Count.ShouldBe(1);
         callOrder[0].ShouldBe(nameof(Setup));
     }
 
-    void Test1(IRazorTestContext context)
+    void Test1()
     {
         callOrder.Add(nameof(Test1));
         callOrder.Count.ShouldBe(2);
         callOrder[0].ShouldBe(nameof(Setup));
         callOrder[1].ShouldBe(nameof(Test1));
-        context.ShouldBe(seenContext);
+        this.ShouldBe(seenContext);
     }
 
-    void Test2(IRazorTestContext context)
+    void Test2()
     {
         callOrder.Add(nameof(Test2));
         callOrder.Count.ShouldBe(3);
         callOrder[0].ShouldBe(nameof(Setup));
         callOrder[1].ShouldBe(nameof(Test1));
         callOrder[2].ShouldBe(nameof(Test2));
-        context.ShouldBe(seenContext);
+        this.ShouldBe(seenContext);
     }
 
-    void Test3(IRazorTestContext context)
+    void Test3()
     {
         callOrder.Add(nameof(Test3));
         callOrder.Count.ShouldBe(4);
@@ -43,6 +42,6 @@
         callOrder[1].ShouldBe(nameof(Test1));
         callOrder[2].ShouldBe(nameof(Test2));
         callOrder[3].ShouldBe(nameof(Test3));
-        context.ShouldBe(seenContext);
+        this.ShouldBe(seenContext);
     }
 }
