--- a/tests/_Imports.razor
+++ b/tests/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Egil.RazorComponents.Testing.SampleComponents
+@using Egil.RazorComponents.Testing.SampleComponents.Data
 @using Shouldly
 @using Xunit
