--- a/template/template/Component1.razor
+++ b/template/template/Component1.razor
@@ -1,3 +1,4 @@
 ﻿<div class="my-component">
-    This Blazor component is defined in the <strong>razorclasslib1</strong> package.
+    This Blazor component is defined in 
+	the <strong>razorclasslib1</strong> package.
 </div>
