--- a/sample/src/Components/WikiSearch.razor
+++ b/sample/src/Components/WikiSearch.razor
@@ -1,6 +1,6 @@
 ﻿@inject IJSRuntime jsRuntime
 
-<p>@searchResult</p>
+<pre class="pre-scrollable w-50">@searchResult</pre>
 
 @code {
     string searchResult = string.Empty;
