--- a/sample/src/Components/Alert.razor
+++ b/sample/src/Components/Alert.razor
@@ -1,13 +1,15 @@
 ﻿@inject IJSRuntime jsRuntime
 
-@if (IsVisible && (Header is { } || ChildContent is { }))
+@if (IsVisible)
 {
     <div role="alert" @attributes="AdditionalAttributes" class=@CssClass>
         @if (Header is { })
         {
             <h4 class="alert-heading">@Localizer[Header]</h4>
         }
-        @ChildContent
+        <div class="alert-content">
+            @ChildContent
+        </div>
         <button @onclick="DismissClicked" type="button" class="close" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -44,21 +46,24 @@
 
     public bool IsVisible { get; private set; } = true;
 
-    public Task Dismiss()
+    public async Task Dismiss()
     {
-        return DismissClicked();
+        await DismissClicked();
+        await InvokeAsync(StateHasChanged);
     }
 
     private async Task DismissClicked()
     {
         var dismissingArgs = new DismissingEventArgs(this);
+
         await OnDismissing.InvokeAsync(dismissingArgs);
 
-        if (dismissingArgs.Cancel) return;
+        if (dismissingArgs.Cancel)
+            return;
 
         Dismissing = true;
 
-        await jsRuntime.InvokeVoidAsync("window.delayedCallback");
+        await jsRuntime.InvokeVoidAsync("window.transitionFinished");
 
         Dismissing = false;
         IsVisible = false;
