--- a/sample/src/Shared/NavMenu.razor
+++ b/sample/src/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-circle-check" aria-hidden="true"></span> Todos
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="dotnetconf">
+                <span class="oi oi-eye" aria-hidden="true"></span> Alert example
+            </NavLink>
+        </li>
     </ul>
 </div>
 
