Change GetNodes and GetMarkup to Nodes and Markup properties in IRenderedFragment

--- a/tests/Components/TestComponentBaseTest/BlazorElementReferencesIncludedInRenderedMarkup.razor
+++ b/tests/Components/TestComponentBaseTest/BlazorElementReferencesIncludedInRenderedMarkup.razor
@@ -13,7 +13,7 @@
     {
         var cut = GetFragment();
 
-        var html = cut.GetMarkup();
+        var html = cut.Markup;
 
         html.ShouldContain($"=\"{refElm.Id}\"");
     }
