--- a/template/template/_Imports.razor
+++ b/template/template/_Imports.razor
@@ -3,4 +3,5 @@
 @using Egil.RazorComponents.Testing.Diffing
 @using Egil.RazorComponents.Testing.Asserting
 @using Egil.RazorComponents.Testing.EventDispatchExtensions
+@using Egil.RazorComponents.Testing.Mocking.JSInterop
 @using Xunit
