--- a/sample/tests/_Imports.razor
+++ b/sample/tests/_Imports.razor
@@ -4,6 +4,7 @@
 @using Egil.RazorComponents.Testing.EventDispatchExtensions
 @using Egil.RazorComponents.Testing.Mocking.JSInterop
 @using Egil.RazorComponents.Testing.Asserting
+@using Egil.RazorComponents.Testing.Mocking.JSInterop
 
 @using Egil.RazorComponents.Testing.SampleApp
 @using Egil.RazorComponents.Testing.SampleApp.Data
