TestServiceProvider now explictly implements IServiceCOlelction

--- a/sample/tests/RazorTestComponents/Pages/FetchDataTest.razor
+++ b/sample/tests/RazorTestComponents/Pages/FetchDataTest.razor
@@ -23,7 +23,7 @@
 
     void Setup()
     {
-        Services.AddService<IWeatherForecastService>(forecastService);
+        Services.AddSingleton<IWeatherForecastService>(forecastService);
     }
 
     void InitialLoadingHtmlRendersCorrectly()
