--- a/sample/tests/_Imports.razor
+++ b/sample/tests/_Imports.razor
@@ -1,16 +1,15 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.Extensions.DependencyInjection
 
 @using Egil.RazorComponents.Testing
 @using Egil.RazorComponents.Testing.EventDispatchExtensions
 @using Egil.RazorComponents.Testing.Mocking.JSInterop
 @using Egil.RazorComponents.Testing.Asserting
-@using Egil.RazorComponents.Testing.Mocking.JSInterop
 
 @using Egil.RazorComponents.Testing.SampleApp
 @using Egil.RazorComponents.Testing.SampleApp.Data
 @using Egil.RazorComponents.Testing.SampleApp.Components
 @using Egil.RazorComponents.Testing.SampleApp.Pages
-
 
 @using Xunit
 @using Shouldly
