--- a/tests/Components/TestComponentBaseTest/CorrectImplicitRazorTestContextAvailable.razor
+++ b/tests/Components/TestComponentBaseTest/CorrectImplicitRazorTestContextAvailable.razor
@@ -14,7 +14,7 @@
 
     void Setup1()
     {
-        Services.AddService<ITestDep>(dep1Expected);
+        Services.AddSingleton<ITestDep>(dep1Expected);
     }
 
     void Test1()
@@ -52,7 +52,7 @@
 
     void Setup2()
     {
-        Services.AddService<ITestDep>(dep2Expected);
+        Services.AddSingleton<ITestDep>(dep2Expected);
     }
 
     void Test2()
@@ -86,7 +86,7 @@
     }
 }
 
-<SnapshotTest Description="Snapshot tests should have own context" Setup="() => Services.AddService<ITestDep>(new Dep3())">
+<SnapshotTest Description="Snapshot tests should have own context" Setup="() => Services.AddSingleton<ITestDep>(new Dep3())">
     <TestInput><SimpleWithDeps /></TestInput>
     <ExpectedOutput><p>@nameof(Dep3)</p></ExpectedOutput>
 </SnapshotTest>
