--- a/tests/Components/TestComponentBaseTest/SnapshotTestTest.razor
+++ b/tests/Components/TestComponentBaseTest/SnapshotTestTest.razor
@@ -1,13 +1,19 @@
 @inherits TestComponentBase
 @using Shouldly
 
-<SnapshotTest Setup="() => Services">
+@code {
+    class Dep1 : ITestDep { public string Name { get; } = "FOO"; }
+    class Dep2 : IAsyncTestDep { public Task<string> GetData() => Task.FromResult("BAR"); }
+}
+
+<SnapshotTest Setup="() => Services.AddSingleton<ITestDep, Dep1>()"
+              SetupAsync="() => { Services.AddSingleton<IAsyncTestDep, Dep2>(); return Task.CompletedTask; }">
     <TestInput>
         <SimpleWithDeps></SimpleWithDeps>
         <SimpleWithAyncDeps></SimpleWithAyncDeps>
     </TestInput>
     <ExpectedOutput>
-        @inject ITestDep testDep
-<p>@testDep.Name</p>
+        <p>FOO</p>
+        <p>BAR</p>
     </ExpectedOutput>
 </SnapshotTest>
