--- a/sample/tests/RazorTestComponents/Components/AlertRazorTest.razor
+++ b/sample/tests/RazorTestComponents/Components/AlertRazorTest.razor
@@ -1,7 +1,7 @@
-﻿@inherits TestComponentBase
+@inherits TestComponentBase
 
 @code {
-    MockJsRuntimeInvokeHandler MockJsRuntime { get; set; }
+    MockJsRuntimeInvokeHandler MockJsRuntime { get; set; } = default!;
 
     void Setup()
     {
