--- a/sample/tests/_Imports.razor
+++ b/sample/tests/_Imports.razor
@@ -1,7 +1,9 @@
-﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.Extensions.DependencyInjection
 
 @using Egil.RazorComponents.Testing
 @using Egil.RazorComponents.Testing.EventDispatchExtensions
+@using Egil.RazorComponents.Testing.Mocking.JSInterop
 @using Egil.RazorComponents.Testing.Asserting
 
 @using Egil.RazorComponents.Testing.SampleApp
