--- a/tests/_Imports.razor
+++ b/tests/_Imports.razor
@@ -1,5 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.Extensions.DependencyInjection
+@using Egil.RazorComponents.Testing
+@using Egil.RazorComponents.Testing.Asserting
+@using Egil.RazorComponents.Testing.EventDispatchExtensions
+@using Egil.RazorComponents.Testing.Mocking.JSInterop
 @using Egil.RazorComponents.Testing.SampleComponents
 @using Egil.RazorComponents.Testing.SampleComponents.Data
 @using Shouldly
