--- a/sample/src/_Imports.razor
+++ b/sample/src/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@namespace Egil.RazorComponents.Testing.SampleApp
+﻿@namespace Bunit.SampleApp
 @using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
@@ -6,8 +6,8 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using Egil.RazorComponents.Testing
-@using Egil.RazorComponents.Testing.SampleApp
-@using Egil.RazorComponents.Testing.SampleApp.Data
-@using Egil.RazorComponents.Testing.SampleApp.Components
-@using Egil.RazorComponents.Testing.SampleApp.Shared
+@using Bunit
+@using Bunit.SampleApp
+@using Bunit.SampleApp.Data
+@using Bunit.SampleApp.Components
+@using Bunit.SampleApp.Shared
