--- a/sample/tests/_Imports.razor
+++ b/sample/tests/_Imports.razor
@@ -1,15 +1,12 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.Extensions.DependencyInjection
 
-@using Egil.RazorComponents.Testing
-@using Egil.RazorComponents.Testing.EventDispatchExtensions
-@using Egil.RazorComponents.Testing.Mocking.JSInterop
-@using Egil.RazorComponents.Testing.Asserting
-
-@using Egil.RazorComponents.Testing.SampleApp
-@using Egil.RazorComponents.Testing.SampleApp.Data
-@using Egil.RazorComponents.Testing.SampleApp.Components
-@using Egil.RazorComponents.Testing.SampleApp.Pages
+@using Bunit
+@using Bunit.Mocking.JSInterop
+@using Bunit.SampleApp
+@using Bunit.SampleApp.Data
+@using Bunit.SampleApp.Components
+@using Bunit.SampleApp.Pages
 
 @using Xunit
 @using Shouldly
