--- a/sample/src/Pages/_Host.cshtml
+++ b/sample/src/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace Egil.RazorComponents.Testing.SampleApp.Pages
+@namespace Bunit.SampleApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Egil.RazorComponents.Testing.Library.SampleApp</title>
+    <title>Bunit.Library.SampleApp</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
