--- a/tests/SampleComponents/LifeCycleTracker.razor
+++ b/tests/SampleComponents/LifeCycleTracker.razor
@@ -1,7 +1,9 @@
 ﻿@implements IDisposable
+<button @onclick="() => Number++" />
+<p>@Number</p>
 @code {
-    public Dictionary<string, int> LifeCycleMethodCallLog { get; } = new Dictionary<string, int>
-    {
+    public static Dictionary<string, int> CreateDefaultCallLog() => new Dictionary<string, int>
+{
         { nameof(SetParametersAsync), 0 },
         { nameof(OnInitialized), 0 },
         { nameof(OnInitializedAsync), 0 },
@@ -14,43 +16,45 @@
         { nameof(Dispose), 0 }
     };
 
+    [Parameter] public Dictionary<string, int> CallLog { get; set; } = CreateDefaultCallLog();
+
     [Parameter] public int Number { get; set; }
 
     public override Task SetParametersAsync(ParameterView parameters)
     {
-        LifeCycleMethodCallLog[nameof(SetParametersAsync)] += 1;
+        CallLog[nameof(SetParametersAsync)] += 1;
         return base.SetParametersAsync(parameters);
     }
 
-    protected override void OnInitialized() => LifeCycleMethodCallLog[nameof(OnInitialized)] += 1;
+    protected override void OnInitialized() => CallLog[nameof(OnInitialized)] += 1;
 
     protected override Task OnInitializedAsync()
     {
-        LifeCycleMethodCallLog[nameof(OnInitializedAsync)] += 1;
+        CallLog[nameof(OnInitializedAsync)] += 1;
         return Task.CompletedTask;
     }
 
-    protected override void OnParametersSet() => LifeCycleMethodCallLog[nameof(OnParametersSet)] += 1;
+    protected override void OnParametersSet() => CallLog[nameof(OnParametersSet)] += 1;
 
     protected override Task OnParametersSetAsync()
     {
-        LifeCycleMethodCallLog[nameof(OnParametersSetAsync)] += 1;
+        CallLog[nameof(OnParametersSetAsync)] += 1;
         return base.OnParametersSetAsync();
     }
 
     protected override void OnAfterRender(bool firstRender)
     {
-        LifeCycleMethodCallLog[nameof(OnAfterRender) + (firstRender ? "FirstRender" : "")] += 1;
+        CallLog[nameof(OnAfterRender) + (firstRender ? "FirstRender" : "")] += 1;
     }
 
     protected override Task OnAfterRenderAsync(bool firstRender)
     {
-        LifeCycleMethodCallLog[nameof(OnAfterRenderAsync) + (firstRender ? "FirstRender" : "")] += 1;
+        CallLog[nameof(OnAfterRenderAsync) + (firstRender ? "FirstRender" : "")] += 1;
         return base.OnAfterRenderAsync(firstRender);
     }
 
     public void Dispose()
     {
-        LifeCycleMethodCallLog[nameof(Dispose)] += 1;
+        CallLog[nameof(Dispose)] += 1;
     }
 }
