--- a/sample/tests/RazorTestComponents/Pages/FetchDataTest.razor
+++ b/sample/tests/RazorTestComponents/Pages/FetchDataTest.razor
@@ -42,7 +42,7 @@
         var cut = RenderComponent<FetchData>();
 
         // act
-        WaitForNextRender(() => forecastService.Task.SetResult(forecasts));
+        WaitForRender(() => forecastService.Task.SetResult(forecasts));
 
         // assert
         cut.GetChangesSinceFirstRender().ShouldHaveChanges(
