Added obsolete to WaitForNextRender, exposed WaitForState and WaitForAssertion at ITextContext level

--- a/sample/tests/RazorTestComponents/Pages/FetchDataTest.razor
+++ b/sample/tests/RazorTestComponents/Pages/FetchDataTest.razor
@@ -42,7 +42,7 @@
         var cut = RenderComponent<FetchData>();
 
         // act
-        WaitForRender(() => forecastService.Task.SetResult(forecasts));
+        WaitForNextRender(() => forecastService.Task.SetResult(forecasts));
 
         // assert
         cut.GetChangesSinceFirstRender().ShouldHaveChanges(
