--- a/sample/tests/RazorTestComponents/Components/AlertRazorTest.razor
+++ b/sample/tests/RazorTestComponents/Components/AlertRazorTest.razor
@@ -201,7 +201,7 @@
         Assert.DoesNotContain("show", cut.Find(".alert").ClassList);
 
         // Act - complete
-        WaitForRender(() =>
+        WaitForNextRender(() =>
         {
             plannedInvocation.SetResult(default!);
         });
