First set of blazor e2e tests, smarter FindAll

--- a/tests/SampleComponents/Simple1.razor
+++ b/tests/SampleComponents/Simple1.razor
@@ -2,4 +2,4 @@
     [Parameter] public string Header { get; set; } = string.Empty;
     [Parameter] public string AttrValue { get; set; } = string.Empty;
 }
-<h1 attr=@AttrValue>@Header</h1>
+<h1 id="header" attr=@AttrValue>@Header</h1>
